--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^1.19.1"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -29,6 +30,6 @@
     "helmet": "^3.18.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.17.5",
-    "sqlite3": "^4.0.8"
+    "sqlite3": "^4.0.9"
   }
 }
